   stack of colors using the constant syntax.  PUSHCOLOR stores the
   attributes being set on its internal stack, POPCOLOR returns to the
   previous attribute set, and LOCALCOLOR surrounds its argument in
   PUSHCOLOR and POPCOLOR.  If $AUTOLOCAL is set, each sequence of color
   constants will be implicitly preceded by LOCALCOLOR.  This support was
   contributed by openmethods.com voice solutions.

 - When AUTOLOAD is called to generate a constant sub and the environment
   variable ANSI_COLORS_DISABLED is set, return the stringified arguments
   rather than creating a sub.  This allows colors to work later if
   ANSI_COLORS_DISABLED is unset rather than making its effects permanent.
   It also avoids adding a reset escape sequence when $AUTORESET and
   ANSI_COLORS_DISABLED are both set.

 - Add faint as a synonym for dark.

 - Fix spelling and markup errors in the documentation and improve the
   documentation of text attributes.

1.12 - 2007-04-22

 - Use the correct syntax for internal POD links in the documentation.

 - Document cyan and white as supported attributes.

1.11 - 2006-06-22

 - Clarify in the documentation the behavior of terminals when background
   colors are set across newlines, and rewrite some of the examples to
   avoid doing things that confuse the terminal.

1.10 - 2005-08-21

 - Fix $EACHLINE handling of lines consisting solely of "0".

 - Add terminal test files from Joe Smith to the distribution.

1.09 - 2004-12-03

 - Add compatibility information for Mac OS X Terminal to the terminal
   emulators table.  Thanks, Daniel Lindsley.

1.08 - 2004-02-19

 - Export DARK as a constant.  This was missed when dark was added as a
   supported attribute.

1.07 - 2003-03-25

 - Document the behavior of PuTTY, Windows telnet, and Cygwin OpenSSH in
   the terminal emulators table.

 - Update the URL to the ECMA standard.

1.06 - 2002-12-09

 - Fix a typo in an L<> link in the documentation.

1.05 - 2002-06-28
